# Tirep

./: README.md  pyproject.toml
data/: names.txt  russian_names.txt
src/: main.py
